--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <!-- Button for smallest screens -->
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
                 <a class="navbar-brand" href="index.html">
-                    <img src="assets/images/logo.jpeg" alt="Techro HTML5 template"></a>
+                    <img src="assets/images/mainlogo.png" style="height: 6rem; width: auto;" alt="Techro HTML5 template"></a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav pull-right mainNav">
