--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<meta name="description" content="free-educational-responsive-web-template-webEdu">
 	<meta name="author" content="webThemez.com">
 	<title>maluscoachingclasses</title>
-	<link rel="favicon" href="assets/images/favicon.png">
+	<link rel="favicon" href="assets/images/mainlogo.png">
 	<link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/css/font-awesome.min.css"> 
@@ -33,7 +33,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
 				<a class="navbar-brand" href="index.html">
-					<img src="assets/images/logo.jpeg" alt="Techro HTML5 template"></a>
+					<img src="assets/images/mainlogo.png" style="height: 6rem; width: auto;" alt="Techro HTML5 template"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right mainNav">
