--- a/courses.html
+++ b/courses.html
@@ -62,7 +62,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <div class="container">
 <h3>Courses</h3>
 <p>
-	At Malus Coaching, we offer a wide range of courses designed to help you achieve your personal and professional goals. Our expert coaches provide personalized instruction and support to ensure your success.
+	At Malus Coaching, we offer comprehensive courses for CBSE, ICSE, and State Board curriculums. Excel in competitive exams like NEET, CET, KCET, IIT, and JEE with our expert coaches providing personalized instruction and support to ensure your success. Achieve your personal and professional goals with tailored study plans and dedicated guidance.
 </p>
 <br/>
 <!-- <ul class="list-unstyled video-list-thumbs row">
@@ -104,8 +104,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div id="courses">
 		<section class="container">
 			<h3>Courses</h3>
+			<br>
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-md-4" style="background-image: url('assets/images/cbscbg2.jpg'); object-fit:fill; background-repeat: no-repeat; background-position: center; object-fit: contain; color: black;">
 					<div class="featured-box"> 
 						<div class="text">
 							<h3>CBSE</h3>
@@ -113,7 +114,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</div>
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-4" style="background-image: url('assets/images/icsebg.jpg'); object-fit:fill; background-repeat: no-repeat; background-position: center; object-fit: contain; color: black;">
 					<div class="featured-box"> 
 						<div class="text">
 							<h3>ICSE</h3>
@@ -121,7 +122,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</div>
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-4"  style="background-image: url('assets/images/statebg.jpg'); object-fit:fill; background-repeat: no-repeat; background-position: center; object-fit: contain; color: black;">
 					<div class="featured-box"> 
 						<div class="text">
 							<h3> State Board</h3>
@@ -131,7 +132,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-md-4"  style="background-image: url('assets/images/compbg.png'); object-fit:fill; background-repeat: no-repeat; background-position: center; object-fit: contain; color: black;">
 					<div class="featured-box"> 
 						<div class="text">
 							<h3>Competitive Exam</h3>
@@ -139,27 +140,28 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</div>
 					</div>
 				</div>
-				<div class="col-md-4">
-					<div class="featured-box"> 
+				<div class="col-md-4"  style="background-image: url('assets/images/niosbg.jpg'); object-fit:fill; background-repeat: no-repeat; background-position: center; object-fit: contain; color: black;">
+					<div class="featured-box" > 
 						<div class="text">
 							<h3>NIOS</h3>
 							At Malus Coaching, we understand the unique needs of students pursuing their education through the National Institute of Open Schooling (NIOS). Our comprehensive NIOS tuition program is designed to provide personalized support and guidance to students at every step of their academic journey.
 						</div>
 					</div>
 				</div>
-				<!-- <div class="col-md-4">
+				<div class="col-md-4"  style="background-image: url('assets/images/testbg.jpg'); object-fit:fill; background-repeat: no-repeat; background-position: center; object-fit: contain; color: black;">
 					<div class="featured-box"> 
 						<div class="text">
-							<h3>Mobile App Dev</h3>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							<h3>Weekend test</h3>
+							At Malus Coaching, we understand the importance of consistent practice and assessment in achieving academic excellence. Our weekend test series is meticulously designed to provide students with a comprehensive evaluation of their understanding and preparation level across various subjects.
 						</div>
 					</div>
-				</div> -->
+				</div>
 			</div>
 
 		</section>
 	</div>
-    
+    <br>
+	<br>
 	<!-- container -->
 	<div class="container">
 		<div class="row">
@@ -167,18 +169,18 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<section class="col-sm-12 maincontent">
 				<!-- <h3>Responsive Website</h3> -->
 				<p>
-					Welcome to Malus Coaching Classes in Halasuru, Bangalore
-
-Personalized Attention: At Malus Coaching Classes, we believe in providing special attention to each and every student. This personalized approach helps students feel connected to their teachers, encouraging them to openly discuss any difficulties they may face.
-
+				<b style="font-size: 3rem;">Welcome to Malus Coaching Classes in Halasuru, Bangalore</b>
+<br> <br>
+	Personalized Attention: At Malus Coaching Classes, we believe in providing special attention to each and every student. This personalized approach helps students feel connected to their teachers, encouraging them to openly discuss any difficulties they may face.
+	<br> <br>
 Expert Guidance: Our team of highly qualified and experienced teachers is passionate about education. They offer one-on-one support to ensure your child's academic success.
-
+<br> <br>
 Advanced Learning: We utilize pioneering digital classrooms and online knowledge-sharing platforms to keep students engaged and informed. Our advanced learning techniques ensure that students are always at the forefront of educational innovation.
-
+<br> <br>
 Progress Tracking: We keep parents and teachers updated with regular progress reports. This ensures that everyone involved is on the same page and working together towards the student's success.
-
+<br> <br>
 Convenient Location: Located in Halasuru, Bangalore, Malus Coaching Classes is easily accessible, providing a convenient option for quality education in the area.
-
+<br> <br>
 Experience the difference at Malus Coaching Classes – where personalized attention, expert guidance, advanced learning, and consistent progress tracking come together to ensure your child's success.
 				</p>
 				<!-- <h3>Bootstrap</h3>
