--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
 				<a class="navbar-brand" href="index.html">
-					<img src="assets/images/mainlogo.png" style="height: 6rem; width: auto;" alt="Techro HTML5 template"></a>
+					<img src="assets/images/mainlogo.png" style="height: 7rem; width: auto;" alt="Techro HTML5 template"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right mainNav">
@@ -142,6 +142,28 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</div><!--icon box top -->
 							<h4>NIOS Special Batch Classes</h4>
 							<map>We provide specialized coaching for students enrolled in NIOS.</map>
+     						<!-- <p><a href="#"><em>Read More</em></a></p> -->
+						</div><!--grey box -->
+					</a>
+
+          <a class="col-md-3" href="courses.html" style="text-decoration: none;">
+						<div class="grey-box-icon" style="height: 30rem;">
+							<div class="icon-box-top grey-box-icon-pos">
+								<img src="assets/images/st1.png" alt="" />
+							</div><!--icon box top -->
+							<h4>Dedicated Student Counselling</h4>
+							<map>At Malus Coaching Classes, we believe that academic success is built on a strong foundation of personalized guidance and support. This is why our dedicated student counselling stands as the cornerstone of our educational philosophy.</map>
+     						<!-- <p><a href="#"><em>Read More</em></a></p> -->
+						</div><!--grey box -->
+					</a>
+
+          <a class="col-md-3" href="courses.html" style="text-decoration: none;">
+						<div class="grey-box-icon" style="height: 30rem;">
+							<div class="icon-box-top grey-box-icon-pos">
+								<img src="assets/images/pe1.png" alt="" />
+							</div><!--icon box top -->
+							<h4>Parent Teacher Counselling & Guidance</h4>
+							<map>At our core, we believe in the transformative power of collaboration between parents and teachers. </map>
      						<!-- <p><a href="#"><em>Read More</em></a></p> -->
 						</div><!--grey box -->
 					</a>
