--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <!-- Member Details -->
                         <h4>Kulvanth Singh Maken</h4>
                         <!-- Designation -->
-                        <span class="pos">CEO</span>
+                        <span class="pos">Director</span>
                         <div class="team-socials">
                             <a href="#"><i class="fa fa-facebook"></i></a>
                             <!-- <a href="#"><i class="fa fa-google-plus"></i></a> -->
